--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                   may require you to provide us with certain personally
                   identifiable information. The information that
                   I request will be retained on your device and is not collected by me in any way.
-                </p> <div><p>
+                </p> 
+        <div><p>
                     The app does use third party services that may collect
                     information used to identify you.
                   </p> <p>
